<resources>
    <string name="app_name">FirebaseTesting</string>
    <string name="name_placeholder">Name</string>
    <string name="e_mail_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="submit_button">Submit</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_email_address">Your Email Address:</string>
    <string name="welcome">Welcome,</string>
    <string name="register">Register</string>
    <string name="user_area">User Area</string>
    <string name="admin_area">Admin Area</string>
</resources>